# justllm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: demo.cast
benchmarks/: README.md  __init__.py  bench_e2e.py  bench_overhead.py  bench_reliability.py  bench_savings.py  fixtures.py  run.py
examples/: README.md  agent_with_tools.py  async_calls.py  basics.py  batch.py  chat.py  compression.py  demo.py  evaluate.py  observability.py  prompts.py  routing.py  streaming.py  structured_output.py
scripts/: gen_demo.py
src/justllm/: __init__.py  agent.py  chat.py  client.py  compress.py  eval.py  observability.py  prompts.py  reliability.py  router.py  transports.py
tests/: test_client.py  test_examples_compile.py  test_prompts.py  test_reliability.py
